--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Will Simmons",
   "dependencies": {
+    "dotenv": "^5.0.0",
     "gatsby": "^1.9.118",
     "gatsby-image": "^1.0.27",
     "gatsby-link": "^1.6.28",
