--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-source-filesystem": "^1.5.8",
     "gatsby-transformer-remark": "^1.7.21",
     "gatsby-transformer-sharp": "^1.6.14",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "node-fetch": "^2.0.0"
   },
   "homepage": "https://github.com/willsimmons/portfolio",
   "keywords": [
