--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gatsby-transformer-remark": "^1.7.21",
     "gatsby-transformer-sharp": "^1.6.14",
     "lodash": "^4.17.5",
-    "node-fetch": "^2.0.0"
+    "node-fetch": "^2.0.0",
+    "prop-types": "^15.6.0"
   },
   "homepage": "https://github.com/willsimmons/portfolio",
   "keywords": [
