--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^5.0.0",
     "gatsby": "^1.9.118",
+    "gatsby-cli": "^1.1.44",
     "gatsby-image": "^1.0.27",
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-google-analytics": "^1.0.12",
