--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-cli": "^1.1.44",
     "gatsby-image": "^1.0.27",
     "gatsby-link": "^1.6.28",
+    "gatsby-plugin-favicon": "^2.1.1",
     "gatsby-plugin-google-analytics": "^1.0.12",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.14",
